--- a/ExamMidterm/Galway-991418738-Midterm/Galway-991418738-Midterm/MainWindow.xaml
+++ b/ExamMidterm/Galway-991418738-Midterm/Galway-991418738-Midterm/MainWindow.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Galway_991418738_Midterm"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Canvas Height="434" Width="800">
+        Title="MainWindow" Height="500" Width="800">
+    <Canvas Width="800" Margin="0,10,0,-6">
         <Border Canvas.Left="86" Canvas.Top="46" BorderBrush="Black" BorderThickness="1">
             <Canvas Height="284" Width="628">
-                <Label x:Name="lblProgram" Content="Kyle Bookstore Midterm Application" Canvas.Top="25" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" Width="628" Height="55"/>
-                <Label x:Name="lblDeveloped" Content="Developed By" Canvas.Top="110" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" Width="628" Height="55" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                <Label x:Name="lblStudentName" Content="Kyle Galway" Canvas.Top="165" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" Width="628" Height="55" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-                <Label x:Name="lblStudentNumber" Content="991418738" Canvas.Top="219" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" Width="628" Height="55" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                <Label x:Name="lblProgram" Content="Kyle Bookstore Midterm Application" Canvas.Top="25" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Top" Width="628" Height="55" Style="{DynamicResource lbl-center}" />
+                <Label x:Name="lblDeveloped" Content="Developed By" Canvas.Top="110" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" Width="628" Height="55" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource lbl-center}"/>
+                <Label x:Name="lblStudentName" Content="Kyle Galway" Canvas.Top="165" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" Width="628" Height="55" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource lbl-center}"/>
+                <Label x:Name="lblStudentNumber" Content="991418738" Canvas.Top="219" VerticalContentAlignment ="Center" HorizontalContentAlignment="Center" Width="628" Height="55" HorizontalAlignment="Center" VerticalAlignment="Top" Style="{DynamicResource lbl-center}"/>
             </Canvas>
         </Border>
         <DockPanel Canvas.Top="366" Width="350" LastChildFill="False" HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="225">
