--- a/Assignments/AssignmentTwo_KyleGalway/A2KyleGalway/A2KyleGalway/App.xaml
+++ b/Assignments/AssignmentTwo_KyleGalway/A2KyleGalway/A2KyleGalway/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:A2KyleGalway"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="StyleDictionary.xaml"></ResourceDictionary>
     </Application.Resources>
 </Application>
